scss/_custom.scss
/* ... */
.login-box .btn {
  padding: 7px 23px;
}
.google-signin .btn {
  padding: 7px 23px !important;
}
.no-spacing {
  padding: 0px;
  margin: 0px;
}
.modal-content .no-spacing {
  padding: 0px;
  margin: 0px;
}
.modal .modal-dialog {
  max-width: 700px;
}
.modal-body {
  max-height: calc(100vh - 150px);
  overflow-y: auto;
}
.modal-body {
  margin-top: 20px;
}
.modal-container {
  border: 1px solid #dcdcdc;
}
.empty-title-bar {
  height: 10px;
  background: #78909c;
}
.modal-footer-no-border {
  align-items: center;
  justify-content: center;
  border-top: 0px solid #e9ecef;
  text-align: center;
}
.close-batch-btn {
  text-align: right;
  margin-top: 20px;
  margin-right: 40px;
  margin-bottom: 25px;

  button:hover {
    color:#dedede;
  }
}
.batch-register-row {
  padding: 10px 0px;
  background: #f6f6f6;
  border-radius: 10px;
  margin-bottom: 15px;
}
.modal-footer > :not(:last-child) {
  margin-right: 1rem;
}
.modal-batch-name {
  font-size: 15px;
  font-weight: 500;
  color: #515151;
}
.modal-person-name {
  font-size: 12px;
  color: #8a8a8a;
}
.frame-border {
  border: 1px solid #e8e8e8;
}
.modal {
  padding: 0px !important;
}
.btn-outline-secondary:focus,
.btn-outline-secondary.focus {
  box-shadow: 0 0 0 1px rgba(108, 117, 125, 0.5);
}
.btn:focus,
.btn.focus {
  box-shadow: 0 0 0 1px rgba(108, 117, 125, 0.5);
}
.sidemenu {
  @include sidemenu;
}
.sidemenu-bg {
  background: #424242;
  flex-direction: column;
  display: flex;
  flex-grow: 1;
  min-height: calc(100vh - 138px);
}
.sidemenu-bottom-section {
  @include sidemenu-bottom;
  p {
    text-align: center;
    padding: 15px 20px;
    font-size: 11px;
    color: #c3c4c5;
    margin-bottom: 0px;
  }
}
.breadcrumb-row {
  border-top: 3px solid #696b6a;
  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  padding: 10px 20px 10px;
  color: #919191;
  font-size: 20px;
  position: relative;
    z-index: 1;
}
.breadcrumb-row div {
  display: flex;
  align-items: center;
  svg {
    margin-right: 10px;
  }
  .bread-arrow {
    margin: 0px 6px;
    position: relative;
    top: -1px;
  }
}
.breadcrumb-row svg {
  position: relative;
width: 28px;
height: 28px;
}
.right-content-wrapper {
  padding: 10px 25px;
  // margin-top: 20px;
  margin-bottom: 50px;
}
.dark-svg path {
  fill: #455a64;
}
.white-svg path {
  fill: #fff;
}
.footer-copyright {
  font-size: 13px;
}
.right-content-items-heading {
  font-size: 22px;
  margin-bottom: 10px;
  margin: 30px 0px 0px;
}
.right-content-items-column {
  display: flex;
  flex-wrap: wrap;
}
.right-column-menu-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 16px 5px;
  text-align: center;
  align-items: center;
  background: white;
  // border: 1px solid #acadae;
  border-top: 10px solid #78909c;
  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  flex-basis: 155px;
  margin-right: 15px;
  cursor: pointer;
  margin-top: 20px;
  color: inherit;
  &:hover {
    color: inherit;
  }
}
.right-column-menu-item svg {
  margin-bottom: 10px;
  width: 32px;
  height: 32px;
}
.right-column-search-filter-row {
  display: flex;
  padding: 15px 40px;
  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
}
.left-column-search {
  flex-basis: 70%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.right-column-search {
  flex: 1;
  text-align: right;
}
.search-advance-btn {
  margin-left: 15px;
}
.small-input {
  width: 120px;
}
.medium-input {
  width: 180px;
}
.show-advanced-row {
  background: #f7f7f7;
  padding: 15px 40px;
  border-top: 1px solid #ced6e0;
  border-bottom: 1px solid #ced6e0;
}
.advanced-search-checkbox {
  display: inline-block;
  width: 100%;
  input {
    margin-right: 5px;
  }
  div {
    display: inline-block;
    margin-right: 10px;
  }
}
.customer-created-date {
  display: inline-block;
}
.advanced-search-column-row {
  display: flex;
  margin-top: 10px;
}
.advanced-search-column {
  margin-right: 10px;
  select {
    font-size: 14px;
    background: #fff;
    box-shadow: none;
    padding: 6px 10px 5px;
    border-radius: 0px;
    border: 1px solid #dcdcdc;
  }
  input {
    font-size: 14px;
    background: #fff;
    box-shadow: none;
    border-radius: 0px;
    border: 1px solid #dcdcdc;
  }
}
.breadcrumb-arrow path {
  fill: #929292;
}
.right-side-left-column {
  padding: 20px;
  flex-basis: 45%;
}
.right-side-right-column {
  padding: 20px;
  flex-basis: 45%;
}
.type-discount-row {
  display: flex;
  background: #f9f9f9;
  flex-direction: column;
  border: 1px solid #dddddd;
}
.inner-type-discount-row {
  padding: 10px;
  border-bottom: 1px solid #dddddd;
  display: flex;
  align-items: center;
  div {
    display: inline-block;
    margin-right: 10px;
    width: 100px;
  }
  select {
    font-size: 14px;
    background: #fff;
    box-shadow: none;
    padding: 4px;
    border-radius: 0px;
    border: 1px solid #dcdcdc;
    width: 130px;
    margin-top: 0px;
  }
}

.login-bg-wrapper {
  background-image: url(../images/login-bg.png);
  width: 100%;
  height: 100vh;
  background-size: cover;
  display: flex;
  align-items: center;
}
.select-store-bg {
  // background-image: url(../images/select-store-bg.png);
  // width: 100%;
  // height: 100vh;
  // background-size: cover;
  // display: flex;
  // align-items: center;
  width: 100%;
  height: 100vh;
  background-size: cover;
  display: flex;
  align-items: center;
  // position: absolute;
  position: relative;
  top: 0;
  bottom: 0;
}
.login-box h2 {
  color: #fff;
  font-size: 48px;
  text-align: center;
  font-weight: 300;
  margin-bottom: 30px;
}
/* ... */

